# FastAPI

./: .gitignore  Readme.md  learning-roadmap.md
1-Learn/1-path-query-parameters/: Readme.md
1-Learn/10-Web-Sockets/: README.md
1-Learn/2-Request-body/: README.md
1-Learn/3-Response/: README.md
1-Learn/4-File-and-Forms/: README.md
1-Learn/5-Handling-Errors/: README.md
1-Learn/6-Path-Operation-Config/: README.md
1-Learn/7-security/: README.md
1-Learn/7-security/1-First-steps/: README.md
1-Learn/7-security/2-Get-current-user/: README.md
1-Learn/8-Metadata/: README.md
1-Learn/9-Testing/: README.md
1-Learn/fastapi-sqlmodel/: Readme.md  db_connection.py  main.py  schema.py  test_main.py
1-Learn/path-query-parameters/: main.py
Back-end/deploying-to-cloudflare/: README.md
Back-end/poetry-class/: Dockerfile  pyproject.toml
Back-end/poetry-class/poetryclass/: main.py
Back-end/poetry-class/poetryclass/1-Learn/fastapi-sqlmodel/: Readme.md  db_connection.py  main.py  schema.py  test_main.py
Back-end/poetry-class/poetryclass/1-Learn/fastapi-sqlmodel/1-Response-model/: README.md
Back-end/poetry-class/poetryclass/1-Learn/fastapi-sqlmodel/2-Multiple-model-and-inheritance/: README.md
Back-end/poetry-class/poetryclass/1-Learn/fastapi-sqlmodel/3-Read-one-field/: README.md
Back-end/poetry-class/poetryclass/1-Learn/fastapi-sqlmodel/7-Path-opertions-for-other-models/: README.md
Back-end/poetry-class/poetryclass/1-Learn/fastapi-sqlmodel/9-Testing/: README.md
Back-end/poetry-class/poetryclass/Learn/fastapi-sqlmodel/: Readme.md  main.py
Back-end/poetry-class/poetryclass/Learn/path-query-parameters/: main.py
Back-end/poetry-class/poetryclass/Learn/relationships/: db.py  main.py  schema.py
Back-end/poetry-class/poetryclass/auth-app/: db.py  main.py
Back-end/poetry-class/poetryclass/auth-app/credential-providers/: auth.py  database.py  main.py  models.py
Back-end/poetry-class/poetryclass/img-bg-remover/: main.py
Back-end/poetry-class/poetryclass/music_recommender/: main.py  music_data_set.csv
Back-end/poetry-class/poetryclass/practical/: file_upload.py  get_current_user.py  metadata.py  oauth2_jwt.py  path_operation_configuration.py  path_query_parameters.py  request_form.py  security.py  simple_oauth2.py  web_sockets.py
Back-end/poetry-class/poetryclass/practical/testing/: main.py
Back-end/poetry-class/poetryclass/practical/testing/tests/: test_main.py
Back-end/poetry-class/poetryclass/practical/web-sockets/: cookies_and_tokens.py  web_sockets.py
Back-end/poetry-class/poetryclass/quiz-app/: database.py  main.py  questions.md  quiz-data.json  schema.py
Back-end/poetry-class/poetryclass/todo-app/: main.py
Back-end/poetry-class/poetryclass/todo_app/: compose.yaml  dockerfile  main.py  pyproject.toml  schema.py
Back-end/poetry-class/poetryclass/tweets-app/: database.py  main.py  models.py  utils.py
Back-end/poetry-class/tests/: test_main.py
FastAPI-book-docs/: Readme.md
Front-end/: package-lock.json  tailwind.config.js
Front-end/auth-app/: index.html  script.js  styles.css
Front-end/img-bg-remover/: index.html  script.js
Front-end/music-recommender/: index.html  styles.css
Front-end/quiz-app/: index.html  styles.css
Front-end/styles/: output.css
Front-end/tweets-app/: create-tweet.html  index.html  scripts.js  styles.css
Front-end/web-sockets/: index.html
poetry-class/: README.md  pyproject.toml
poetry-class/poetryclass/: main.py
(+32 files in other folders)
