[tool.poetry]
name = "poetryclass"
version = "0.1.0"
description = ""
authors = ["Sarmad rafique <sarmadrafique040@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.2"
fastapi = "^0.115.2"
uvicorn = { extras = ["standard"], version = "^0.28.0" }
sqlmodel = "^0.0.16"
jinja2 = "^3.1.3"
python-multipart = "^0.0.9"
pytest = "^8.2.2"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
numpy = "<2.0.0"
pillow = "^10.4.0"
aiofiles = "^24.1.0"
rembg = "^2.0.57"
authlib = "^1.3.1"
httpx = "^0.27.0"
requests = "^2.32.3"
pydantic = "^2.9.2"
pyjwt = "^2.9.0"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
psycopg2-binary = "^2.9.9"
python-jose = "^3.3.0"
websockets = "^13.0.1"
types-python-jose = "^3.3.4.20240106"
pandas-stubs = "^2.2.3.241009"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
