[tool.poetry]
name = "poetryclass"
version = "0.1.0"
description = ""
authors = ["Sarmad rafique <sarmadrafique040@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13.2,<3.14"
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.28" }
sqlmodel = "^0.0"
jinja2 = "^3.1"
python-multipart = "^0.0"
pytest = "^8.2"
pandas = "^2.2"
scikit-learn = "^1.5"
numpy = "^1.26"
pillow = "^10.4"
aiofiles = "^24.1"
rembg = "^2.0"
authlib = "^1.3"
httpx = "^0.27"
requests = "^2.32"
pydantic = "^2.9"
pyjwt = "^2.9"
passlib = { extras = ["bcrypt"], version = "^1.7" }
# psycopg2-binary = "^2.9"
python-jose = "^3.3"
websockets = "^13.0"
types-python-jose = "^3.3"
pandas-stubs = "^2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
httpx = "^0.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
