[tool.poetry]
name = "poetryclass"
version = "0.1.0"
description = ""
authors = ["Sarmad rafique <sarmadrafique040@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12.4,<3.13"
fastapi = "^0.115.2"
uvicorn = { extras = ["standard"], version = "^0.28.0" }
sqlmodel = "^0.0.16"
jinja2 = "^3.1.3"
python-multipart = "^0.0.9"
pytest = "^8.2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
